Fix contrast on banner

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
 .banner {
   background-color: #FEB2A8;
   color: #000;
-  opacity: .8;
+  opacity: .9;
 }
 
 footer {
